# just-tg-copier

./: .gitignore  pyproject.toml
tg_channel_copier/: __main__.py  client.py  config.py  copier.py  sender.py  state.py
