[tool.poetry]
name = "just-tg-copier"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimnissv@yandex.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.44.0"
python-dotenv = "^1.2.2"
qrcode = "^8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
